fix:Pr2398-fixed the scrollbar on the bottom of the page (#352)
* fix:Pr2398-fixed the scrollbar on the bottom of page

* fix:Pr2398-fixed the scrollbar on the bottom of page

--- a/src/components/bene-dashboard/summary/biodata/biodata.component.css
+++ b/src/components/bene-dashboard/summary/biodata/biodata.component.css
@@ -14,6 +14,9 @@
   display: flex;
   flex-direction: column;
 }
+::-webkit-scrollbar {
+  height: 7px;
+}
 
 .beneNameContainer {
   padding: 8px 0;
